<resources>
    <string name="app_name">MovieNight</string>
    <string name="insertMovie">My Movies - Insert Movies</string>
    <string name="movie_title">Movie Title</string>
    <string name="titleHint">Enter movie title here</string>
    <string name="genre">Genre</string>
    <string name="genreHint">Enter genre here</string>
    <string name="year">Year</string>
    <string name="yearHint">Enter year of release here</string>
    <string name="rating">Rating</string>
    <string name="insert">Insert</string>
    <string name="show_list">Show List</string>
    <string name="pg13">SHOW ALL PG 13 MOVIES</string>
    <string name="cancel">Cancel</string>
    <string name="modify_movie">Modify Movie</string>
    <string name="movie_id">Movie ID</string>
    <string-array name="movie_ratings">
        <item>ALL</item>
        <item>G</item>
        <item>PG</item>
        <item>PG13</item>
        <item>NC16</item>
        <item>M18</item>
        <item>R21</item>
    </string-array>
</resources>